@@ -6,3 +6,13 @@
 	background:none; padding-right:0px;
 	text-transform:lowercase;
 }
+
+#botnav {
+    float: right;
+}
+
+#botnav a {
+    color: #d9dde8;
+    margin-right: 12px;
+    text-transform: lowercase;
+}
