@@ -121,16 +121,12 @@ searchTypes = ['Projects', 'Users', 'Packages']
         </tr>
     </tbody>
 
-    <div py:def="rpathProductsMenu" id="browse" class="palette">
+    <div py:def="rpathProductsMenu" id="browse" class="palette products">
         <h3>rpath products</h3>
         <ul>
-            <li><a href="/"><strong py:strip="req.uri != '/'">Project Home</strong></a></li>
-            <li><a href="/releases"><strong py:strip="lastchunk not in ('release', 'releases')">Releases</strong></a></li>
-
-            <li><a href="/conary/browse"><strong py:strip="req.uri != '/conary/browse'">Repository</strong></a></li>
-            <li><a href="/members"><strong py:strip="lastchunk != 'members'">Project Members</strong></a></li>
-            <li><a href="/mailingLists"><strong py:strip="lastchunk != 'mailingLists'">Mailing Lists</strong></a></li>
-            <li py:if="0"><a href="#"><strong py:strip="lastchunk != 'bugs'">Bug Tracking</strong></a></li>
+            <li><a href="#">Product 1</a></li>
+            <li><a href="#">Product 2</a></li>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras erat. Curabitur tempus nulla sit amet justo. Morbi quis tellus sed turpis bibendum egestas. Phasellus nonummy!</li>
         </ul>
     </div>
 </html>
